--- a/templates/FichesClient/New_FicheClient.html.twig
+++ b/templates/FichesClient/New_FicheClient.html.twig
@@ -290,9 +290,12 @@ function clickEventLiv() {
 						</div>
 
 						<div class="form-row">
-							<div class="col-md-6">
+							<div class="col-md-5">
 								<div class="position-relative form-group">
 									<label for="engagement" class="">N° Engagement</label><input name="engagement" type="text" class="form-control" ></div>
+							</div>
+							<div class="col-md-2">
+								
 							</div>
 							<div class="col-md-1">
 								<div class="position-relative form-group">
@@ -300,16 +303,19 @@ function clickEventLiv() {
 									<input name="appelVendredi" type="checkbox" class="form-control">
 								</div>
 							</div>
-							<div class="col-md-5">
+							<div class="col-md-4">
 								<div class="position-relative form-group">
 									<label for="horaireVendredi" class="">Horaire Vendredi</label><input name="horaireVendredi" type="text" class="form-control" ></div>
 							</div>
 						</div>
 
 						<div class="form-row">
-							<div class="col-md-6">
+							<div class="col-md-5">
 								<div class="position-relative form-group">
 									<label for="codeService" class="">Code Service</label><input name="codeService" type="text" class="form-control"></div>
+							</div>
+							<div class="col-md-2">
+								
 							</div>
 							<div class="col-md-1">
 								<div class="position-relative form-group">
@@ -317,18 +323,21 @@ function clickEventLiv() {
 									<input name="appelSamedi" type="checkbox" class="form-control">
 								</div>
 							</div>
-							<div class="col-md-5">
+							<div class="col-md-4">
 								<div class="position-relative form-group">
 									<label for="horaireSamedi" class="">Horaire Samedi</label><input name="horaireSamedi" type="text" class="form-control" ></div>
 							</div>
 						</div>						
 
 						<div class="form-row">
-							<div class="col-md-6">
+							<div class="col-md-5">
 								<div class="position-relative form-group">
 									<label for="adrLiv" class="">Adresse pour Envoi Factures (si différente d'Adresse Livraison)</label><input name="adrLiv" type="text" class="form-control"></div>
 							</div>
-							<div class="col-md-6">
+							<div class="col-md-2">
+								
+							</div>
+							<div class="col-md-5">
 								<div class="position-relative form-group">
 									<label for="emailFacture" class="">Email Envoi Facture</label><input name="emailFacture" type="text" class="form-control" ></div>
 							</div>
@@ -339,20 +348,23 @@ function clickEventLiv() {
 								<div class="position-relative form-group">
 									<label for="codePostalLiv" class="">Code Postal</label><input id="codePostalLiv" name="codePostalLiv" type="text" class="form-control" maxlength="10" onkeyup="clickEventLiv()"></div>
 							</div>
-							<div class="col-md-4">
+							<div class="col-md-3">
 								<div class="position-relative form-group">
 									<label for="villeLiv" class="">Ville</label><input name="villeLiv" list="villeLiv" type="text" class="form-control" maxlength="250">
 									<datalist id="villeLiv"></datalist>
 									</div>
 							</div>
-							<div class="col-md-6">
+							<div class="col-md-2">
+								
+							</div>
+							<div class="col-md-5">
 								<div class="position-relative form-group">
 									<label for="tarifClient" class="">Tarif Client</label><input name="tarifClient" type="text" class="form-control" ></div>
 							</div>
 						</div>
 						
 						<div class="form-row">
-							<div class="col-md-6">
+							<div class="col-md-5">
 								<div class="position-relative form-group">
 									<label for="stat1" class="">AFFTYPO CHAMPS STAT 1</label>
 									<select class="form-control" name="stat1">
@@ -363,7 +375,10 @@ function clickEventLiv() {
 									</select>
 								</div>
 							</div>
-							<div class="col-md-4">
+							<div class="col-md-2">
+								
+							</div>
+							<div class="col-md-3">
 								<div class="position-relative form-group">
 									<label for="typeClient" class="">Envoi Tarif Automatique</label>
 								</div>
@@ -383,7 +398,7 @@ function clickEventLiv() {
 						</div>
 
 						<div class="form-row">
-							<div class="col-md-6">
+							<div class="col-md-5">
 								<div class="position-relative form-group">
 									<label for="stat1" class="">AFFCAT 2 CHAMPS STAT 2</label>
 									<select class="form-control" name="stat2">
@@ -394,14 +409,17 @@ function clickEventLiv() {
 									</select>
 								</div>
 							</div>
-							<div class="col-md-6">
+							<div class="col-md-2">
+								
+							</div>
+							<div class="col-md-5">
 								<div class="position-relative form-group">
 									<label for="date1Livraison" class="">Date 1ère Livraison</label><input name="date1Livraison" type="date" class="form-control" ></div>
 							</div>
 						</div>
 						
 						<div class="form-row">
-							<div class="col-md-6">
+							<div class="col-md-5">
 								<div class="position-relative form-group">
 									<label for="stat1" class="">AFFCAT 3 CHAMPS STAT 3</label>
 									<select class="form-control" name="stat3">
@@ -412,7 +430,10 @@ function clickEventLiv() {
 									</select>
 								</div>
 							</div>
-							<div class="col-md-4">
+							<div class="col-md-2">
+								
+							</div>
+							<div class="col-md-3">
 								<div class="position-relative form-group">
 									<label for="typeClient" class="">PVC</label>
 								</div>
@@ -432,7 +453,7 @@ function clickEventLiv() {
 						</div>
 
 						<div class="form-row">
-							<div class="col-md-6">
+							<div class="col-md-5">
 								<div class="position-relative form-group">
 									<label for="stat1" class="">AFFCAT 1 CHAMPS STAT 4</label>
 									<select class="form-control" name="stat4">
@@ -443,17 +464,201 @@ function clickEventLiv() {
 									</select>
 								</div>
 							</div>
-							<div class="col-md-6">
+							<div class="col-md-2">
+								
+							</div>
+							<div class="col-md-5">
 								<div class="position-relative form-group">
 									<label for="coefPVC" class="">Coef PVC</label><input name="coefPVC" type="text" class="form-control" ></div>
 							</div>
 						</div>
 
+						<div class="form-row">
+							<div class="col-md-5">
+								<div class="position-relative form-group">
+									<label for="stat1" class="">AFFCAT 4 CHAMPS STAT 5</label>
+									<select class="form-control" name="stat5">
+										<option value=""></option>
+										{% for stat in stats5 %}
+											<option value="{{ stat.Code_STAT5 }}">{{ stat.Libelle_STAT5 }}</option>
+										{% endfor %}
+									</select>
+								</div>
+							</div>
+							<div class="col-md-2">
+								
+							</div>
+							<div class="col-md-5">
+								<div class="position-relative form-group">
+									<label for="coefPVC" class="">Coef PVC</label><input name="coefPVC" type="text" class="form-control" ></div>
+							</div>
+						</div>
 
+						<hr>
+						
+						<div class="form-row">
+							<div class="col-md-12">
+								<div class="position-relative form-group" style="background-color: {{ app.user.company.colorCode }}; color: {{ app.user.company.colorText }}">
+									<h5 style="text-align: center">PARTIE A VALIDER PAR LA LOGISTIQUE</h5>
+								</div>
+							</div>
+						</div>
 
+						<div class="form-row">
+							<div class="col-md-2">
+								<div class="position-relative form-group"style="text-align: center">
+									<label for="trLundi">Tournée LUNDI</label>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group"style="text-align: center">
+									<label for="trMardi">Tournée MARDI</label>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group"style="text-align: center">
+									<label for="trMercredi">Tournée MERCREDI</label>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group"style="text-align: center">
+									<label for="trJeudi">Tournée JEUDI</label>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group"style="text-align: center">
+									<label for="trVendredi">Tournée VENDREDI</label>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group"style="text-align: center">
+									<label for="trSamedi">Tournée SAMEDI</label>
+								</div>
+							</div>
+						</div>
 
+						<div class="form-row">
+							<div class="col-md-2">
+								<div class="position-relative form-group">
+									<select class="form-control" name="trLundi">
+										<option value=""></option>
+										{% for tr in tournees %}
+											<option value="{{ tr.Code_TOURNEE }}">{{ tr.Libelle_TOURNEE }}</option>
+										{% endfor %}
+									</select>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group">
+									<select class="form-control" name="trMardi">
+										<option value=""></option>
+										{% for tr in tournees %}
+											<option value="{{ tr.Code_TOURNEE }}">{{ tr.Libelle_TOURNEE }}</option>
+										{% endfor %}
+									</select>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group">
+									<select class="form-control" name="trMercredi">
+										<option value=""></option>
+										{% for tr in tournees %}
+											<option value="{{ tr.Code_TOURNEE }}">{{ tr.Libelle_TOURNEE }}</option>
+										{% endfor %}
+									</select>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group">
+									<select class="form-control" name="trJeudi">
+										<option value=""></option>
+										{% for tr in tournees %}
+											<option value="{{ tr.Code_TOURNEE }}">{{ tr.Libelle_TOURNEE }}</option>
+										{% endfor %}
+									</select>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group">
+									<select class="form-control" name="trVendredi">
+										<option value=""></option>
+										{% for tr in tournees %}
+											<option value="{{ tr.Code_TOURNEE }}">{{ tr.Libelle_TOURNEE }}</option>
+										{% endfor %}
+									</select>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group">
+									<select class="form-control" name="trSamedi">
+										<option value=""></option>
+										{% for tr in tournees %}
+											<option value="{{ tr.Code_TOURNEE }}">{{ tr.Libelle_TOURNEE }}</option>
+										{% endfor %}
+									</select>
+								</div>
+							</div>
+						</div>
 
-
+						<div class="form-row">
+							<div class="col-md-2">
+								<div class="position-relative form-group"style="text-align: center">
+									<label for="trLundi">Rang LUNDI</label>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group"style="text-align: center">
+									<label for="trMardi">Rang MARDI</label>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group"style="text-align: center">
+									<label for="trMercredi">Rang MERCREDI</label>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group"style="text-align: center">
+									<label for="trJeudi">Rang JEUDI</label>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group"style="text-align: center">
+									<label for="trVendredi">Rang VENDREDI</label>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group"style="text-align: center">
+									<label for="trSamedi">Rang SAMEDI</label>
+								</div>
+							</div>
+						</div>
+						
+						<div class="form-row">
+							<div class="col-md-2">
+								<div class="position-relative form-group">
+									<input name="rgLundi" type="text" class="form-control" ></div>
+								</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group">
+									<input name="rgMardi" type="text" class="form-control" ></div>
+								</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group">
+									<input name="rgMercredi" type="text" class="form-control" ></div>
+								</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group">
+									<input name="rgJeudi" type="text" class="form-control" ></div>
+								</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group">
+									<input name="rgVendredi" type="text" class="form-control" ></div>
+								</div>
+							<div class="col-md-2">
+								<div class="position-relative form-group">
+									<input name="rgSamedi" type="text" class="form-control" ></div>
+								</div>
+						</div>
 					</form>
 				</div>
 			</div>
