--- a/templates/FichesArticle/New_FicheArticle.html.twig
+++ b/templates/FichesArticle/New_FicheArticle.html.twig
@@ -141,10 +141,21 @@
 						</div>
 
 						<div class="form-row">
-							<div class="col-md-6">
+							<div class="col-md-4">
 								<div class="position-relative form-group">
-									<label for="poids_variable" class="">Variable (Si coché = OUI)</label>
-									<input name="poids_variable" type="checkbox" class="form-control" maxlength="100">
+									<label for="poids_variable" class="">Variable</label>
+								</div>
+							</div>
+							<div class="col-md-1">
+								<div class="position-relative form-group">
+  									<label for="oui">Oui</label>
+									<input class="form-control" type="radio" id="oui" name="poids_variable" value="1">
+								</div>
+							</div>
+							<div class="col-md-1">
+								<div class="position-relative form-group">
+  									<label for="non">Non</label>
+									<input class="form-control" type="radio" id="non" name="poids_variable" value="0" checked>
 								</div>
 							</div>
 							<div class="col-md-6">
@@ -177,10 +188,21 @@
 						</div>
 
 						<div class="form-row">
-							<div class="col-md-6">
+							<div class="col-md-4">
 								<div class="position-relative form-group">
-									<label for="piece_variable" class="">Variable (Si coché = OUI)</label>
-									<input name="piece_variable" type="checkbox" class="form-control" maxlength="100">
+									<label for="piece_variable" class="">Variable</label>
+								</div>
+							</div>
+							<div class="col-md-1">
+								<div class="position-relative form-group">
+  									<label for="oui">Oui</label>
+									<input class="form-control" type="radio" id="oui" name="piece_variable" value="1">
+								</div>
+							</div>
+							<div class="col-md-1">
+								<div class="position-relative form-group">
+  									<label for="non">Non</label>
+									<input class="form-control" type="radio" id="non" name="piece_variable" value="0" checked>
 								</div>
 							</div>
 							<div class="col-md-6">
@@ -200,10 +222,21 @@
 						<br>
 
 						<div class="form-row">
-							<div class="col-md-6">
+							<div class="col-md-4">
 								<div class="position-relative form-group">
-									<label for="dlc" class="">DLC (Si coché = OUI)</label>
-									<input name="dlc" type="checkbox" class="form-control" maxlength="100">
+									<label for="dlc" class="">Variable</label>
+								</div>
+							</div>
+							<div class="col-md-1">
+								<div class="position-relative form-group">
+  									<label for="oui">Oui</label>
+									<input class="form-control" type="radio" id="oui" name="dlc" value="1">
+								</div>
+							</div>
+							<div class="col-md-1">
+								<div class="position-relative form-group">
+  									<label for="non">Non</label>
+									<input class="form-control" type="radio" id="non" name="dlc" value="0" checked>
 								</div>
 							</div>
 							<div class="col-md-6">
