--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,6 +10,7 @@
   		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 
     	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
+		<link rel="icon" type="image/ico" href="{{ asset("images/logo.ico") }}" />
 	</head>
 
 	<style>
@@ -149,7 +150,7 @@
 			<div class="col-lg-3 col-md-2"></div>
 			<div class="col-lg-6 col-md-8 login-box">
 				<div class="col-lg-12 login-key">
-					<img src="{{ asset("images/societes/logo.png") }}" width="30%" style="margin-top: 2%"/>
+					<img src="{{ asset("images/logo.png") }}" width="30%" style="margin-top: 2%"/>
 				</div>
 				<br>
 				<br>
