--- a/templates/FichesArticle/Valid_FicheArticle.html.twig
+++ b/templates/FichesArticle/Valid_FicheArticle.html.twig
@@ -77,7 +77,7 @@
 								<div class="position-relative form-group">
 									<label for="grp_art" class="">Groupe Article</label>
                                     <select name="grp_art" type="text" class="form-control" required>
-										<option value="{{ article.grpArticle }}">METTRE LIBELLE</option>
+										<option value="{{ article.grpArticle }}">{{ grp_artCode.Libelle_GROUPE_ARTICLE }}</option>
                                         {% for grp in grp_art %}
 											<option value="{{ grp.Code_GROUPE_ARTICLE }}">{{ grp.Libelle_GROUPE_ARTICLE }}</option>
 										{% endfor %}
@@ -123,7 +123,7 @@
 								<div class="position-relative form-group">
 									<label for="stat1" class="">STAT 1</label>
                                     <select name="stat1" type="text" class="form-control" required>
-										<option value="{{ article.stat1 }}">METTRE LIBELLE</option>
+										<option value="{{ article.stat1 }}">{{ stat1Code.Libelle_STAT1 }}</option>
                                         {% for stat in stat1 %}
 											<option value="{{ stat.Code_STAT1 }}">{{ stat.Libelle_STAT1 }}</option>
 										{% endfor %}
@@ -132,17 +132,28 @@
 						</div>
 
 						<div class="form-row">
-							<div class="col-md-6">
+							<div class="col-md-4">
 								<div class="position-relative form-group">
-									<label for="poids_variable" class="">Variable (Si coché = OUI)</label>
-									<input name="poids_variable" type="checkbox" class="form-control" maxlength="100" {% if article.poidsColisVariable == 1 %}checked{% endif %}>
+									<label for="dlc" class="">Variable</label>
+								</div>
+							</div>
+							<div class="col-md-1">
+								<div class="position-relative form-group">
+  									<label for="poids_variable">Oui</label>
+									<input class="form-control" type="radio" id="oui" name="poids_variable" value="1" {% if article.poidsColisVariable == 1 %}checked{% endif %}>
+								</div>
+							</div>
+							<div class="col-md-1">
+								<div class="position-relative form-group">
+  									<label for="non">Non</label>
+									<input class="form-control" type="radio" id="non" name="poids_variable" value="0" {% if article.poidsColisVariable == 0 %}checked{% endif %}>
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="position-relative form-group">
 									<label for="stat2" class="">STAT 2</label>
                                     <select name="stat2" type="text" class="form-control" required>
-										<option value="{{ article.stat2 }}">METTRE LIBELLE</option>
+										<option value="{{ article.stat2 }}">{{ stat2Code.Libelle_STAT2 }}</option>
                                         {% for stat in stat2 %}
 											<option value="{{ stat.Code_STAT2 }}">{{ stat.Libelle_STAT2 }}</option>
 										{% endfor %}
@@ -159,7 +170,7 @@
 								<div class="position-relative form-group">
 									<label for="stat3" class="">STAT 3</label>
                                     <select name="stat3" type="text" class="form-control" required>
-										<option value="{{ article.stat3 }}">LIBELLE</option>
+										<option value="{{ article.stat3 }}">{{ stat3Code.Libelle_STAT3 }}</option>
                                         {% for stat in stat3 %}
 											<option value="{{ stat.Code_STAT3 }}">{{ stat.Libelle_STAT3 }}</option>
 										{% endfor %}
@@ -168,16 +179,27 @@
 						</div>
 
 						<div class="form-row">
-							<div class="col-md-6">
+							<div class="col-md-4">
 								<div class="position-relative form-group">
-									<label for="piece_variable" class="">Variable (Si coché = OUI)</label>
-									<input name="piece_variable" type="checkbox" class="form-control" maxlength="100" {% if article.pieceColisVariable == 1 %}checked{% endif %}>
+									<label for="dlc" class="">Variable</label>
+								</div>
+							</div>
+							<div class="col-md-1">
+								<div class="position-relative form-group">
+  									<label for="piece_variable">Oui</label>
+									<input class="form-control" type="radio" id="oui" name="piece_variable" value="1" {% if article.pieceColisVariable == 1 %}checked{% endif %}>
+								</div>
+							</div>
+							<div class="col-md-1">
+								<div class="position-relative form-group">
+  									<label for="non">Non</label>
+									<input class="form-control" type="radio" id="non" name="piece_variable" value="0" {% if article.pieceColisVariable == 0 %}checked{% endif %}>
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="position-relative form-group">
 									<label for="stat4" class="">STAT 4</label>
-									<option value="{{ article.stat4 }}">METTRE LIBELLE</option>
+									<option value="{{ article.stat4 }}">{{ stat4Code.Libelle_STAT4 }}</option>
                                     <select name="stat4" type="text" class="form-control" required>
                                         {% for stat in stat4 %}
 											<option value="{{ stat.Code_STAT4 }}">{{ stat.Libelle_STAT4 }}</option>
@@ -191,17 +213,28 @@
 						<br>
 
 						<div class="form-row">
-							<div class="col-md-6">
+							<div class="col-md-4">
 								<div class="position-relative form-group">
-									<label for="dlc" class="">DLC (Si coché = OUI)</label>
-									<input name="dlc" type="checkbox" class="form-control" maxlength="100"  {% if article.dlc == 1 %}checked{% endif %}>
+									<label for="dlc" class="">Variable</label>
+								</div>
+							</div>
+							<div class="col-md-1">
+								<div class="position-relative form-group">
+  									<label for="dlc">Oui</label>
+									<input class="form-control" type="radio" id="oui" name="dlc" value="1" {% if article.dlc == 1 %}checked{% endif %}>
+								</div>
+							</div>
+							<div class="col-md-1">
+								<div class="position-relative form-group">
+  									<label for="non">Non</label>
+									<input class="form-control" type="radio" id="non" name="dlc" value="0" {% if article.dlc == 0 %}checked{% endif %}>
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="position-relative form-group">
 									<label for="men_val" class="">Mention Valorisante</label>
                                     <select name="men_val" type="text" class="form-control">
-										<option value="{{ article.menVal }}">METTRE LIBELLE</option>
+										<option value="{{ article.menVal }}">{{ men_valCode.1 }}</option>
                                         {% for menVal in men_val %}
 											<option value="{{ menVal.Code_MENTION}}">{{ menVal.Libelle_MENTION }}</option>
 										{% endfor %}
@@ -218,7 +251,7 @@
 								<div class="position-relative form-group">
 									<label for="loc" class="">Localisation</label>
                                     <select name="loc" type="text" class="form-control" required>
-										<option value="{{ article.localisation }}">METTRE LIBELLE</option>
+										<option value="{{ article.localisation }}">{{ locCode.Libelle_LOCALISATION }}</option>
                                         {% for loc in loc %}
 											<option value="{{ loc.Code_LOCALISATION }}">{{ loc.Libelle_LOCALISATION }}</option>
 										{% endfor %}
@@ -251,7 +284,7 @@
 								<div class="position-relative form-group">
 									<label for="rup" class="">RUP</label>
                                     <select name="rup" type="text" class="form-control">
-										<option value="{{ article.rup }}">METTRE LE LIBELLE</option>
+										<option value="{{ article.rup }}">{{ rupCode.1 }}</option>
                                         {% for rup in rup %}
 											<option value="{{ rup.Code_RUP }}">{{ rup.Libelle_RUP }}</option>
 										{% endfor %}
@@ -274,7 +307,7 @@
 								<div class="position-relative form-group">
 									<label for="siqo" class="">SIQO</label>
                                     <select name="siqo" type="text" class="form-control">
-										<option value="{{ article.siqo }}">{{ article.siqo }}</option>
+										<option value="{{ article.siqo }}">{{ siqoCode.1 }}</option>
                                         {% for siqo in siqo %}
 											<option value="{{ siqo.Code_SIQO }}">{{ siqo.Libelle_SIQO }}</option>
 										{% endfor %}
