--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -185,8 +185,8 @@
 												<i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
 											</a>
 											<ul>
-												<li><a href="{{ path("ficheClient") }}">Nouvelle Fiche Client</a></li>
-												<li><a href="">Mes Fiches Client</a></li>
+												<li><a href="{{ path("newFicheClient") }}">Nouvelle Fiche Client</a></li>
+												<li><a href="{{ path("myFicheClient") }}">Mes Fiches Client</a></li>
 												<li><a href="">Liste des Fiches Client</a></li>
 											</ul>
 										</li>
