--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,12 +5,12 @@
   		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Réseau Ribé > Connexion</title>
   
-  		<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  		{# <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 
-    	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
-		<link rel="icon" type="image/ico" href="{{ asset("images/logo.ico") }}" />
+    	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">  #}
+		<link rel="icon" type="image/ico" href="{{ asset("images/logo.ico") }}" 
 	</head>
 
 	<style>
