--- a/templates/FichesArticle/Edit_FicheArticle.html.twig
+++ b/templates/FichesArticle/Edit_FicheArticle.html.twig
@@ -32,7 +32,7 @@
 			<span class="btn-icon-wrapper pr-2 opacity-7">
 				<i class="fa fa-check-square fa-w-20"></i>
 			</span>
-			Envoyer la fiche en validation
+			Envoyer la fiche en validion
 		</button>
 	</div>
 {% endblock %}
