--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
 		<meta name="description" content="Outils / Logiciels > Réseau Ribé">
 		<meta name="msapplication-tap-highlight" content="no">
 		<link href="{{ asset('css/main.css') }}" rel="stylesheet">
-		<link rel="icon" type="image/ico" href="{{ asset("images/logo.ico") }}" />
+		<link rel="icon" type="image/ico" href="{{ asset("images/Sigle_Reseau_Ribe_Blanc.ico") }}" />
 	</head>
 
 	<style>
@@ -171,7 +171,7 @@
 							<div class="app-sidebar__inner">
 								<ul class="vertical-nav-menu">
 									<li class="app-sidebar__heading">
-										<img src="{{ asset('images/societes/reseau_ribe.png') }}" width="100%"/>
+										<img src="{{ asset('images/Logo_Reseau_Ribe.png') }}" width="100%"/>
 									</li>
 
 									<li class="app-sidebar__heading">
@@ -215,21 +215,6 @@
 											</ul>
 										</li>
 									{% endif %}
-
-									{# {% if app.user.accessFF == 1 or app.user.accessADM == 1 %}
-										<li>
-											<a class="app-sidebar__heading">
-												<i class="metismenu-icon pe-7s-notebook"></i>
-												Fiches Fournisseur
-												<i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
-											</a>
-											<ul>
-												<li><a href="">Nouvelle Fiche Fournisseur</a></li>
-												<li><a href="{{path("mesFichesArticle")}}">Mes Fiches Fournisseur</a></li>
-												<li><a href="{{path("fichesArticle")}}">Liste des Fiches Fournisseur</a></li>
-											</ul>
-										</li>
-									{% endif %} #}
 
 									<li>
 										<a class="app-sidebar__heading">
