--- a/templates/FichesClient/GenPDF.html.twig
+++ b/templates/FichesClient/GenPDF.html.twig
@@ -71,16 +71,18 @@
     <div id="header">
         <table style="text-align: center; ;font-size: 10px; border: 1px solid black" >
             <tr>
-           {# <td rowspan="4"><img src="{{ asset("img/ribegroupe.png") }}" width="15%"/></td>#}
-          <td rowspan="4"><img src="{{ app.request.getSchemeAndHttpHost() ~ asset('images/Logo_Reseau_Ribe.png') }}" width="95%" alt="logo"></td> 
+                <td rowspan="5"><img src="{{ app.request.getSchemeAndHttpHost() ~ asset('images/Logo_Reseau_Ribe.png') }}" width="95%" alt="logo"></td> 
+                <td colspan="3"></td>
+            </tr>
+            <tr>
                 <td>Date Création</td>
                 <td>06/01/2015</td>
-                <td></td>
+                <td>FE 2</td>
             </tr>
             <tr>
                 <td>Date Version</td>
-                <td>03/12/2021</td>
-                <td>FE 2</td>
+                <td>12/05/2022</td>
+                <td></td>
             </tr>
             <tr>
                 <td>Page</td>
