--- a/templates/FichesClient/New_FicheClient.html.twig
+++ b/templates/FichesClient/New_FicheClient.html.twig
@@ -10,7 +10,7 @@
 	<form method="POST" enctype="multipart/form-data">
 
     <div class="d-inline-block dropdown">
-		<a type="button" class="btn mr-2 mb-2 btn-danger" href="{{ path("newFicheArticle") }}">
+		<a type="button" class="btn mr-2 mb-2 btn-danger" href="{{ path("newFicheClient") }}">
 			<span class="btn-icon-wrapper pr-2 opacity-7">
 				<i class="fa fa-eraser fa-w-20"></i>
 			</span>
